--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "highlight.js": "^9.13.1",
+    "live2d-vue": "^0.1.6",
+    "material-design-icons-iconfont": "^4.0.3",
+    "moment": "^2.23.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.17",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.3.15",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -20,6 +28,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.5.17"
