--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@moefe/vue-aplayer": "^2.0.0-beta.5",
     "axios": "^0.18.0",
-    "highlight.js": "^9.13.1",
-    "live2d-vue": "^0.1.7",
+    "clipboard": "^2.0.4",
+    "highlight.js": "^9.15.6",
+    "live2d-vue": "^0.2.2",
     "material-design-icons-iconfont": "^4.0.3",
     "moment": "^2.23.0",
     "nprogress": "^0.2.0",
+    "textarea-vue": "^0.1.8",
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
