--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VUE_APP_BASE_URL=http://www.myrove.cn/
-VUE_APP_CND_LINK=http://img.cdn.myrove.cn/
+VUE_APP_CND_LINK=http://img.cdn.myrove.cn/blog/
 VUE_APP_CND_IMG_PARAM=imageView2/0/w/200/h/200/q/75|imageslim
